src/pages/Booking.css
.form-section {
  width: 100%;
  padding-top: 60px;
  min-height: 100vh;
  font-family: Arial, Helvetica, sans-serif;
}

.form-header h2 {
  margin-bottom: 20px;
}

.form-header p {
  margin-bottom: 10px;
}

.booking-form {
  margin-inline: auto;
  padding: 30px;
  font-size: 18px;
  max-width: 600px;
  padding-block: 50px;
  display: flex;
  flex-direction: column;
  gap: 40px;
}

.booking-form h3 {
  font-family: Arial, Helvetica, sans-serif;
  color: rgb(98, 98, 98);
}

.form-group {
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.form-control {
  display: flex;
  flex-direction: column;
}

.form-control label {
  font-size: 16px;
  /* font-weight: 600; */
  margin-bottom: 10px;
}

.form-control input[type="text"],
.form-control textarea {
  font-size: 16px;
  border-radius: 8px;
  border: 1px rgba(168, 168, 168, 0.63) solid;
  padding-block: 10px;
  padding-inline: 14px;
  transition: 0.3s;
  background: rgba(207, 207, 207, 0.164);
}

.form-control input[type="text"]:focus,
.form-control textarea:focus {
  outline: none !important;
  border: 1px solid rgb(73, 73, 73);
  box-shadow: 0 0 1px rgb(110, 110, 110);
  /* background: rgba(207, 207, 207, 0.075); */
}

.contact-input-group {
  display: flex;
  flex-direction: column;
  gap: 30px;
  margin-bottom: 20px;
}

.design-type-container {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.check-btn {
  font-size: 30px;
  flex-shrink: 0;
}

.design-type-container input {
  display: none;
}

.booking-form .card {
  border: 1px rgb(91, 91, 91) solid;
  border-radius: 20px;
  padding: 20px;
  background-color: rgba(255, 255, 255, 0.055);
  color: rgb(124, 124, 124);
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 20px;
  cursor: pointer;
  transition: 0.4s;
}

.booking-form .card .card-info {
  display: block;
}

.booking-form .card:hover {
  transform: scale(1.02);
}

input[id="flash-select"]:checked ~ label[for="flash-select"] .card,
input[id="custom-select"]:checked ~ label[for="custom-select"] .card,
input[id="freehand-select"]:checked ~ label[for="freehand-select"] .card {
  border: 1px #535353 solid;
  background-color: rgba(196, 196, 196, 0.417);
  color: #535353;
}

input[id="flash-select"]:checked ~ label[for="flash-select"] .card-info,
input[id="custom-select"]:checked ~ label[for="custom-select"] .card-info,
input[id="freehand-select"]:checked ~ label[for="freehand-select"] .card-info {
  color: #535353;
}

.flash-button {
  position: relative;
  width: 80px;
  height: 26px;
  display: block;
  margin-top: 10px;
}

.flash-button a {
  z-index: 2;
  display: block;
  position: absolute;
  width: 100%;
  height: 100%;
  text-align: center;
  top: 1px;
  color: #535353;
}

.flash-button::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1;
  transition: 0.2s ease-in-out;
  border: 1px solid #535353;
  border-radius: 100px;
}

.flash-button:hover::before {
  transform-origin: center;
  transform: scale(1.1);
  border: 1px solid rgba(255, 255, 255, 0.425);
}

input[type="file"] {
  display: none;
}

.empty-references {
  border: 1px dashed #535353;
  cursor: pointer;
  border-radius: 8px;
  display: flex;
  padding: 12px 12px;
  min-height: 200px;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 10px;
}

.empty-references:active {
  background-color: rgba(255, 255, 255, 0.164);
}

.empty-references .upload-icon {
  font-size: 48px;
}

.add-references {
  display: grid;
  cursor: pointer;
  grid-template-columns: repeat(3, minmax(100px, 1fr));
  grid-template-rows: 110px;
  gap: 10px;
  padding-bottom: 30px;
}

.add-references .upload-icon {
  font-size: 28px;
}

.add-image-btn {
  border: 1px dashed #535353;
  border-radius: 8px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 10px;
}

.reference-upload span {
  font-size: 16px;
}

.submit-button {
  width: 200px;
  margin-inline: auto;
  font: inherit;
  cursor: pointer;
  outline: inherit;
  background-color: var(--accent-color);
  color: var(--accent-color-dark);
  font-size: 20px;
  font-weight: 600;
  padding: 12px;
  border: none;
  border-radius: 8px;
}

.text-error {
  font-size: 20px;
  color: red;
}

/* Chat style

.booking-page {
  width: 100%;
  min-height: 100vh;
  padding: 30px;
  background-color: black;
  color: white;
}
input {
   background-color: blueviolet; 
   margin-left: 20px; 
   caret-color: transparent; 
}
input::after {
  content: "|";
  animation: cursor 1.1s infinite step-start;
}

.custom-type-animation-cursor::after,
.input-caret::after {
  content: "|";
  animation: cursor 1.1s infinite step-start;
}

@keyframes cursor {
  50% {
    opacity: 0;
  }
}

.nav-button {
  background-color: rgba(255, 255, 255, 0.514);
  margin: 20px;
}

.terminal-section {
  margin: 100px auto;
  font-size: 30px;
  font-family: monospace;
  display: flex;
}
*/

/* .text-form {
  display: flex;
}

.text-form input {
  flex: 1;
} */

@media screen and (max-width: 600px) {
}

